--- a/index.html
+++ b/index.html
@@ -80,14 +80,14 @@
           <div id="projectContent">
           <h1>Projects & Cerifications</h1>
           <div id = certTables>
-              <table cellspacing="0" cellpadding="20" width="80%" height="80" border="1">
+              <table cellspacing="0" cellpadding="10" height="80" border="1">
                 <tr>
-                  <th style="font-size: 30px;">Certifications</th>
-                  <th style="font-size: 30px;">Projects</th>
+                  <th style="font-size: 20px;">Certifications</th>
+                  <th style="font-size: 20px;">Projects</th>
                 </tr>
                 <tr>
                   <td id="Cert">GNIIT: C, C++ & JAVA Programming</td>
-                  <td rowspan="3"><p style="text-align: center;font-weight: bold;">Movie Ticket Booking System:</p> <p style="text-align: center;">Developed a website using HTML5, CSS3, and JavaScript for dynamic behavior, with backend connectivity through PHP and MySQL.</p></td>
+                  <td rowspan="3"><p id="t2" style="text-align: center;font-weight: bold;color: rgb(59, 206, 206);">Movie Ticket Booking System:</p> <p id="t2" style="text-align: center;">Developed a website using HTML5, CSS3, and JavaScript for dynamic behavior, with backend connectivity through PHP and MySQL.</p></td>
                 </tr>
                 <tr>
                   <td id="Cert">GNIIT: Data Structures & Algorithms</td>
@@ -97,7 +97,7 @@
                 </tr>
                 <tr>
                   <td id="Cert">GNIIT: Spring in JAVA EE Applications</td>
-                  <td rowspan="3"><p style="text-align: center;font-weight: bold;">Tour Booking and Management (Java):</p><p style="text-align: center;"> Built a command-line application leveraging OOPS concepts, string manipulation, Java File Handling, MySQL, and JDBC API for database operations.</p></td>
+                  <td rowspan="3"><p id="t2" style="text-align: center;font-weight: bold;color: rgb(59, 206, 206);">Tour Booking and Management (Java):</p><p id="t2" style="text-align: center;"> Built a command-line application leveraging OOPS concepts, string manipulation, Java File Handling, MySQL, and JDBC API for database operations.</p></td>
                 </tr>
                 <tr>
                   <td id="Cert">GNIIT: Web development Plus</td>
@@ -107,7 +107,7 @@
                 </tr>
                 <tr>
                   <td id="Cert">GNIIT: Relational DBMS & SQL-Server</td>
-                  <td rowspan="2"><p style="text-align: center;font-weight: bold;">Sonar Motion Alert System (loT, Arduino):</p> <p style="text-align: center;">Developed an IoT project using an Arduino UNO R3 microcontroller, servo motors, sonar sensors, and buzzers, connected via a breadboard. The system was programmed with embedded C++ to create a functional motion detection alert system.</p></td>
+                  <td rowspan="2"><p id="t2" style="text-align: center;font-weight: bold;color: rgb(59, 206, 206);">Sonar Motion Alert System (loT, Arduino):</p> <p id="t2" style="text-align: center;">Developed an IoT project using an Arduino UNO R3 microcontroller, servo motors, sonar sensors, and buzzers, connected via a breadboard. The system was programmed with embedded C++ to create a functional motion detection alert system.</p></td>
                 </tr>
                 <tr>
                   <td id="Cert">GNIIT: Professional Skills - 1</td>
