--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
           </div>
           </div>
         </div>
-        <div class="bioDataDiv">
+        <div class="bioDataDiv" style="overflow: hidden;">
             <hr id="bioDataPage">
             <div id="bioDataContent">
               <h1>Personal Bio-Data</h1>
